--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
   <title>[Title of your project]</title>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" type="text/css" href="main.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="subfiles/main.css" />
+  <link rel="stylesheet" type="text/css" href="subfiles/post.css" />
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    crossorigin="anonymous"></script>
 </head>
 <body>
-  <h1>Welcome to [Title of your project]</h1>
+
+<header>
+  <h1>Welcome to Y</h1>
+</header>
+<nav class="container-fluid text-center">
+  <div class="row row-cols-auto">
+    <a class="col" href="index.html">Home</a>
+    <a class="col" href="search.html">Search</a>
+    <a class="col" href="friends.html">Friends</a>
+    <a class="col" href="profile.html">Profile</a>
+  </div>
+</nav>
+<div class="page">
+  <section class="main_feed_container">
+    <!--a post-->
+    <div class="container-md post_container">
+      <!--profile picture-->
+      <div class="col-sm-1 profile_pic">
+        hej
+      </div>
+
+      <!--main post content-->
+      <div class="col-sm container-md">
+        <div>Emil Johansson</div>
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nobis pariatur ullam sed aspernatur asperiores, quisquam odio sunt, reprehenderit dolorem molestias, iusto nam. Quia alias optio, eum enim obcaecati consequuntur.</div>
+        <div></div>
+        <footer class="container-fluid">
+          <div class="row  text-center">
+            <div class="col" >likes</div>
+            <div class="col">dislikes</div>
+            <div class="col">comment</div>
+            <div class="col">share</div>
+            <div class="col">save</div>
+          </div>
+        </footer>
+      </div>
+
+    </div>
+
+   
+  </section>
+  <aside class="friend_container">
+    hej
+  </aside>
 </body>
+</div>
+
 </html>
