--- a/client/public/profile.html
+++ b/client/public/profile.html
@@ -6,20 +6,222 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="subfiles/main.css" />
+  <link rel="stylesheet" type="text/css" href="subfiles/profile.css" />
+  <link rel="stylesheet" type="text/css" href="subfiles/post.css" />
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header>
-    <h1>Welcome to Profile</h1>
-  </header>
-  <nav class="container-fluid text-center">
-    <div class="row row-cols-auto">
-      <a class="col" href="index.html">Home</a>
-      <a class="col" href="search.html">Search</a>
-      <a class="col" href="friends.html">Firends</a>
-      <a class ="col" href="profile.html">Profile</a>
+  <nav>
+    <header>
+      <h1 class="main_title">Your Profile</h1>
+    </header>
+
+    <div class="container-fluid text-center">
+      <div class="row row-cols-auto menu_options">
+        <a class="col menu_option" href="index.html" >Home</a>
+        <div class="menu_option box_search">
+          <form action="search.html" method="get">
+            <input type="text" class="s_input" name="search" onmouseout="this.value = ''; this.blur();">
+          </form>
+          <p>Search</p>
+        </div>
+        <a class="col menu_option" href="friends.html" >Friends</a>
+        <a class="col menu_option" href="profile.html" >Profile</a>
+      </div>
     </div>
   </nav>
+
+  <div class="page">
+    <section class="profile_container">
+      <div class="profile_info">
+        <div class="col your_profile_pic">
+          <img src="" alt="">
+        </div>
+        
+        <div class="col names">
+          <input onfocus="this.value=''" class="row" type="text" value="Username">
+          <input onfocus="this.value=''" class="row" type="text" value="Name">
+        </div>
+      </div>
+      <textarea name="your_bio" class="your_bio" onfocus="this.value=''">Add your bio...</textarea>
+
+    </section>
+    <aside class="your_posts">
+      <div class="container-md your_post_container">
+        <!--profile picture and time of post-->
+        <div class="col-sm-1">
+          <div class="profile_pic">
+
+          </div>
+          <div class="timestamp">
+            12 min
+          </div>
+        </div>
+        <!--main post content-->
+        <div class="col-sm container-md col2">
+          <div class="user">Lorem ipsum</div>
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nobis pariatur ullam sed aspernatur
+            asperiores, quisquam odio sunt, reprehenderit dolorem molestias, iusto nam. </div>
+          <div></div>
+          <!--interactions-->
+          <footer class="container-fluid">
+            <div class="row  text-center">
+              <div class="col">Likes</div>
+              <div class="col">Dislikes</div>
+              <div class="col">Comment</div>
+              <div class="col">Share</div>
+              <div class="col">Save</div>
+            </div>
+          </footer>
+        </div>
+      </div>
+
+      <div class="container-md your_post_container">
+        <!--profile picture and time of post-->
+        <div class="col-sm-1">
+          <div class="profile_pic">
+
+          </div>
+          <div class="timestamp">
+            12 min
+          </div>
+        </div>
+        <!--main post content-->
+        <div class="col-sm container-md col2">
+          <div class="user">Lorem ipsum</div>
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.  </div>
+          <div></div>
+          <!--interactions-->
+          <footer class="container-fluid">
+            <div class="row  text-center">
+              <div class="col">Likes</div>
+              <div class="col">Dislikes</div>
+              <div class="col">Comment</div>
+              <div class="col">Share</div>
+              <div class="col">Save</div>
+            </div>
+          </footer>
+        </div>
+      </div>
+
+      <div class="container-md your_post_container">
+        <!--profile picture and time of post-->
+        <div class="col-sm-1">
+          <div class="profile_pic">
+
+          </div>
+          <div class="timestamp">
+            12 min
+          </div>
+        </div>
+        <!--main post content-->
+        <div class="col-sm container-md col2">
+          <div class="user">Lorem ipsum</div>
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nobis pariatur ullam sed aspernatur
+            asperiores, quisquam odio sunt, reprehenderit dolorem molestias, iusto nam. </div>
+          <div></div>
+          <!--interactions-->
+          <footer class="container-fluid">
+            <div class="row  text-center">
+              <div class="col">Likes</div>
+              <div class="col">Dislikes</div>
+              <div class="col">Comment</div>
+              <div class="col">Share</div>
+              <div class="col">Save</div>
+            </div>
+          </footer>
+        </div>
+      </div>
+
+      <div class="container-md your_post_container">
+        <!--profile picture and time of post-->
+        <div class="col-sm-1">
+          <div class="profile_pic">
+
+          </div>
+          <div class="timestamp">
+            12 min
+          </div>
+        </div>
+        <!--main post content-->
+        <div class="col-sm container-md col2">
+          <div class="user">Lorem ipsum</div>
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nobis pariatur ullam sed aspernatur
+            asperiores, quisquam odio sunt, reprehenderit dolorem molestias, iusto nam. </div>
+          <div></div>
+          <!--interactions-->
+          <footer class="container-fluid">
+            <div class="row  text-center">
+              <div class="col">Likes</div>
+              <div class="col">Dislikes</div>
+              <div class="col">Comment</div>
+              <div class="col">Share</div>
+              <div class="col">Save</div>
+            </div>
+          </footer>
+        </div>
+      </div>
+
+      <div class="container-md your_post_container">
+        <!--profile picture and time of post-->
+        <div class="col-sm-1">
+          <div class="profile_pic">
+
+          </div>
+          <div class="timestamp">
+            12 min
+          </div>
+        </div>
+        <!--main post content-->
+        <div class="col-sm container-md col2">
+          <div class="user">Lorem ipsum</div>
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit.  </div>
+          <div></div>
+          <!--interactions-->
+          <footer class="container-fluid">
+            <div class="row  text-center">
+              <div class="col">Likes</div>
+              <div class="col">Dislikes</div>
+              <div class="col">Comment</div>
+              <div class="col">Share</div>
+              <div class="col">Save</div>
+            </div>
+          </footer>
+        </div>
+      </div>
+
+      <div class="container-md your_post_container">
+        <!--profile picture and time of post-->
+        <div class="col-sm-1">
+          <div class="profile_pic">
+
+          </div>
+          <div class="timestamp">
+            12 min
+          </div>
+        </div>
+        <!--main post content-->
+        <div class="col-sm container-md col2">
+          <div class="user">Lorem ipsum</div>
+          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nobis pariatur ullam sed aspernatur
+            asperiores, quisquam odio sunt,  </div>
+          <div></div>
+          <!--interactions-->
+          <footer class="container-fluid">
+            <div class="row  text-center">
+              <div class="col">Likes</div>
+              <div class="col">Dislikes</div>
+              <div class="col">Comment</div>
+              <div class="col">Share</div>
+              <div class="col">Save</div>
+            </div>
+          </footer>
+        </div>
+      </div>
+
+    </aside>
+  </div>
+  
 </body>
 </html>
