--- a/client/public/index.html
+++ b/client/public/index.html
@@ -66,11 +66,11 @@
           <!--interactions-->
           <footer class="container-fluid">
             <div class="row  text-center">
-              <div class="col">Likes</div>
-              <div class="col">Dislikes</div>
-              <div class="col">Comment</div>
-              <div class="col">Share</div>
-              <div class="col">Save</div>
+              <button class="col interaction">Likes</button>
+              <button class="col interaction">Dislikes</button>
+              <button class="col interaction">Comment</button>
+              <button class="col interaction">Share</button>
+              <button class="col interaction">Save</button>
             </div>
           </footer>
         </div>
