Co-authored-by: MoaLilja <MoaLilja@users.noreply.github.com>

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,7 @@
 
   <nav>
     <header>
-      <h1 class="main_title">Welcome to Y</h1>
+      <img src="/client/public/subfiles/picture/Ylight.png" alt="logo"></h1>
     </header>
 
     <div class="container-fluid text-center">
@@ -66,196 +66,139 @@
           <!--interactions-->
           <footer class="container-fluid">
             <div class="row  text-center">
-              <button class="col interaction">Likes</button>
-              <button class="col interaction">Dislikes</button>
-              <button class="col interaction">Comment</button>
-              <button class="col interaction">Share</button>
-              <button class="col interaction">Save</button>
+              <button class="col interaction like_button"></button>
+              <button class="col interaction dislike_button"></button>
+              <button class="col interaction comment_button"></button>
+              <button class="col interaction share_button"></button>
+              <button class="col interaction save_button"></button>
             </div>
           </footer>
         </div>
       </div>
 
       <div class="container-md post_container">
+        <!--profile picture and time of post-->
         <div class="col-sm-1">
           <div class="profile_pic">
 
           </div>
           <div class="timestamp">
-            2h
+            12 min
           </div>
         </div>
-
+        <!--main post content-->
         <div class="col-sm container-md">
-          <div class="user">Erik Karlsson</div>
+          <div class="user">Emil Johansson</div>
           <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nobis pariatur ullam sed aspernatur
             asperiores, quisquam odio sunt, reprehenderit dolorem molestias, iusto nam. Quia alias optio, eum enim
             obcaecati consequuntur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio expedita placeat
             corrupti velit veritatis soluta, distinctio tenetur culpa? Corrupti porro numquam fugit quia sapiente
             reprehenderit doloremque incidunt ab illo repellat. lor</div>
           <div></div>
+          <!--interactions-->
           <footer class="container-fluid">
             <div class="row  text-center">
-              <div class="col">Likes</div>
-              <div class="col">Dislikes</div>
-              <div class="col">Comment</div>
-              <div class="col">Share</div>
-              <div class="col">Save</div>
+              <button class="col interaction like_button"></button>
+              <button class="col interaction dislike_button"></button>
+              <button class="col interaction comment_button"></button>
+              <button class="col interaction share_button"></button>
+              <button class="col interaction save_button"></button>
             </div>
           </footer>
         </div>
       </div>
 
       <div class="container-md post_container">
-
+        <!--profile picture and time of post-->
         <div class="col-sm-1">
           <div class="profile_pic">
 
           </div>
           <div class="timestamp">
-            7h
+            12 min
           </div>
         </div>
-
+        <!--main post content-->
         <div class="col-sm container-md">
-          <div class="user">Moa Lilja Falkenberg</div>
+          <div class="user">Emil Johansson</div>
           <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nobis pariatur ullam sed aspernatur
             asperiores, quisquam odio sunt, reprehenderit dolorem molestias, iusto nam. Quia alias optio, eum enim
             obcaecati consequuntur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio expedita placeat
             corrupti velit veritatis soluta, distinctio tenetur culpa? Corrupti porro numquam fugit quia sapiente
             reprehenderit doloremque incidunt ab illo repellat. lor</div>
           <div></div>
+          <!--interactions-->
           <footer class="container-fluid">
             <div class="row  text-center">
-              <div class="col">Likes</div>
-              <div class="col">Dislikes</div>
-              <div class="col">Comment</div>
-              <div class="col">Share</div>
-              <div class="col">Save</div>
+              <button class="col interaction like_button"></button>
+              <button class="col interaction dislike_button"></button>
+              <button class="col interaction comment_button"></button>
+              <button class="col interaction share_button"></button>
+              <button class="col interaction save_button"></button>
             </div>
           </footer>
         </div>
       </div>
 
       <div class="container-md post_container">
-
+        <!--profile picture and time of post-->
         <div class="col-sm-1">
           <div class="profile_pic">
 
           </div>
           <div class="timestamp">
-            7h
+            12 min
           </div>
         </div>
-
+        <!--main post content-->
         <div class="col-sm container-md">
-          <div class="user">Moa Lilja Falkenberg</div>
+          <div class="user">Emil Johansson</div>
           <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nobis pariatur ullam sed aspernatur
             asperiores, quisquam odio sunt, reprehenderit dolorem molestias, iusto nam. Quia alias optio, eum enim
             obcaecati consequuntur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio expedita placeat
             corrupti velit veritatis soluta, distinctio tenetur culpa? Corrupti porro numquam fugit quia sapiente
             reprehenderit doloremque incidunt ab illo repellat. lor</div>
           <div></div>
+          <!--interactions-->
           <footer class="container-fluid">
             <div class="row  text-center">
-              <div class="col">Likes</div>
-              <div class="col">Dislikes</div>
-              <div class="col">Comment</div>
-              <div class="col">Share</div>
-              <div class="col">Save</div>
+              <button class="col interaction like_button"></button>
+              <button class="col interaction dislike_button"></button>
+              <button class="col interaction comment_button"></button>
+              <button class="col interaction share_button"></button>
+              <button class="col interaction save_button"></button>
             </div>
           </footer>
         </div>
       </div>
 
       <div class="container-md post_container">
-
+        <!--profile picture and time of post-->
         <div class="col-sm-1">
           <div class="profile_pic">
 
           </div>
           <div class="timestamp">
-            7h
+            12 min
           </div>
         </div>
-
+        <!--main post content-->
         <div class="col-sm container-md">
-          <div class="user">Moa Lilja Falkenberg</div>
+          <div class="user">Emil Johansson</div>
           <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nobis pariatur ullam sed aspernatur
             asperiores, quisquam odio sunt, reprehenderit dolorem molestias, iusto nam. Quia alias optio, eum enim
             obcaecati consequuntur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio expedita placeat
             corrupti velit veritatis soluta, distinctio tenetur culpa? Corrupti porro numquam fugit quia sapiente
             reprehenderit doloremque incidunt ab illo repellat. lor</div>
           <div></div>
+          <!--interactions-->
           <footer class="container-fluid">
             <div class="row  text-center">
-              <div class="col">Likes</div>
-              <div class="col">Dislikes</div>
-              <div class="col">Comment</div>
-              <div class="col">Share</div>
-              <div class="col">Save</div>
-            </div>
-          </footer>
-        </div>
-      </div>
-
-      <div class="container-md post_container">
-
-        <div class="col-sm-1">
-          <div class="profile_pic">
-
-          </div>
-          <div class="timestamp">
-            7h
-          </div>
-        </div>
-
-        <div class="col-sm container-md">
-          <div class="user">Moa Lilja Falkenberg</div>
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nobis pariatur ullam sed aspernatur
-            asperiores, quisquam odio sunt, reprehenderit dolorem molestias, iusto nam. Quia alias optio, eum enim
-            obcaecati consequuntur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio expedita placeat
-            corrupti velit veritatis soluta, distinctio tenetur culpa? Corrupti porro numquam fugit quia sapiente
-            reprehenderit doloremque incidunt ab illo repellat. lor</div>
-          <div></div>
-          <footer class="container-fluid">
-            <div class="row  text-center">
-              <div class="col">Likes</div>
-              <div class="col">Dislikes</div>
-              <div class="col">Comment</div>
-              <div class="col">Share</div>
-              <div class="col">Save</div>
-            </div>
-          </footer>
-        </div>
-      </div>
-
-      <div class="container-md post_container">
-
-        <div class="col-sm-1">
-          <div class="profile_pic">
-
-          </div>
-          <div class="timestamp">
-            13h
-          </div>
-        </div>
-
-        <div class="col-sm container-md">
-          <div class="user">Milton Niklasson</div>
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nobis pariatur ullam sed aspernatur
-            asperiores, quisquam odio sunt, reprehenderit dolorem molestias, iusto nam. Quia alias optio, eum enim
-            obcaecati consequuntur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio expedita placeat
-            corrupti velit veritatis soluta, distinctio tenetur culpa? Corrupti porro numquam fugit quia sapiente
-            reprehenderit doloremque incidunt ab illo repellat. lor</div>
-          <div></div>
-          <footer class="container-fluid">
-            <div class="row  text-center">
-              <div class="col">Likes</div>
-              <div class="col">Dislikes</div>
-              <div class="col">Comment</div>
-              <div class="col">Share</div>
-              <div class="col">Save</div>
+              <button class="col interaction like_button"></button>
+              <button class="col interaction dislike_button"></button>
+              <button class="col interaction comment_button"></button>
+              <button class="col interaction share_button"></button>
+              <button class="col interaction save_button"></button>
             </div>
           </footer>
         </div>
@@ -269,8 +212,12 @@
         </div>
         <div class="col-sm container-md">
           <div class="user">Lorem ipsum</div>
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
-            aperiam.</div>
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
+              aperiam.
+            </p>
+          </div>
         </div>
       </div>
       <div class="friend container-md">
@@ -279,8 +226,12 @@
         </div>
         <div class="col-sm container-md">
           <div class="user">Lorem ipsum</div>
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
-            aperiam.</div>
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
+              aperiam.
+            </p>
+          </div>
         </div>
       </div>
       <div class="friend container-md">
@@ -289,8 +240,12 @@
         </div>
         <div class="col-sm container-md">
           <div class="user">Lorem ipsum</div>
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
-            aperiam.</div>
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
+              aperiam.
+            </p>
+          </div>
         </div>
       </div>
       <div class="friend container-md">
@@ -299,8 +254,12 @@
         </div>
         <div class="col-sm container-md">
           <div class="user">Lorem ipsum</div>
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
-            aperiam.</div>
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
+              aperiam.
+            </p>
+          </div>
         </div>
       </div>
 
@@ -310,28 +269,42 @@
         </div>
         <div class="col-sm container-md">
           <div class="user">Lorem ipsum</div>
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
-            aperiam.</div>
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
+              aperiam.
+            </p>
+          </div>
         </div>
       </div>
+
       <div class="friend container-md">
         <div class="col-sm-1 profile_pic">
 
         </div>
         <div class="col-sm container-md">
           <div class="user">Lorem ipsum</div>
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
-            aperiam.</div>
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
+              aperiam.
+            </p>
+          </div>
         </div>
       </div>
+
       <div class="friend container-md">
         <div class="col-sm-1 profile_pic">
 
         </div>
         <div class="col-sm container-md">
           <div class="user">Lorem ipsum</div>
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
-            aperiam.</div>
+          <div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
+              aperiam.
+            </p>
+          </div>
         </div>
       </div>
     </aside>
