Fixade färgerna för tillfället i profilen

--- a/client/public/profile.html
+++ b/client/public/profile.html
@@ -14,7 +14,7 @@
 <body>
   <nav>
     <header>
-      <h1 class="main_title">Your Profile</h1>
+      <img src="/client/public/subfiles/picture/Ylight.png" alt="logo">
     </header>
 
     <div class="container-fluid text-center">
