--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,7 @@
 
   <nav>
     <header>
-      <img src="/client/public/subfiles/picture/Ylight.png" alt="logo"></h1>
+      <img src="/client/public/subfiles/picture/Ylight.png" alt="logo">
     </header>
 
     <div class="container-fluid text-center">
