Beige och ikoner

--- a/client/public/profile.html
+++ b/client/public/profile.html
@@ -67,11 +67,11 @@
           <!--interactions-->
           <footer class="container-fluid">
             <div class="row  text-center">
-              <div class="col">Likes</div>
-              <div class="col">Dislikes</div>
-              <div class="col">Comment</div>
-              <div class="col">Share</div>
-              <div class="col">Save</div>
+              <button class="col interactionp like_buttonp"></button>
+              <button class="col interactionp dislike_buttonp"></button>
+              <button class="col interactionp comment_buttonp"></button>
+              <button class="col interactionp share_buttonp"></button>
+              <button class="col interactionp save_buttonp"></button>
             </div>
           </footer>
         </div>
@@ -95,11 +95,11 @@
           <!--interactions-->
           <footer class="container-fluid">
             <div class="row  text-center">
-              <div class="col">Likes</div>
-              <div class="col">Dislikes</div>
-              <div class="col">Comment</div>
-              <div class="col">Share</div>
-              <div class="col">Save</div>
+              <button class="col interactionp like_buttonp"></button>
+              <button class="col interactionp dislike_buttonp"></button>
+              <button class="col interactionp comment_buttonp"></button>
+              <button class="col interactionp share_buttonp"></button>
+              <button class="col interactionp save_buttonp"></button>
             </div>
           </footer>
         </div>
@@ -124,11 +124,11 @@
           <!--interactions-->
           <footer class="container-fluid">
             <div class="row  text-center">
-              <div class="col">Likes</div>
-              <div class="col">Dislikes</div>
-              <div class="col">Comment</div>
-              <div class="col">Share</div>
-              <div class="col">Save</div>
+              <button class="col interactionp like_buttonp"></button>
+              <button class="col interactionp dislike_buttonp"></button>
+              <button class="col interactionp comment_buttonp"></button>
+              <button class="col interactionp share_buttonp"></button>
+              <button class="col interactionp save_buttonp"></button>
             </div>
           </footer>
         </div>
@@ -153,11 +153,11 @@
           <!--interactions-->
           <footer class="container-fluid">
             <div class="row  text-center">
-              <div class="col">Likes</div>
-              <div class="col">Dislikes</div>
-              <div class="col">Comment</div>
-              <div class="col">Share</div>
-              <div class="col">Save</div>
+              <button class="col interactionp like_buttonp"></button>
+              <button class="col interactionp dislike_buttonp"></button>
+              <button class="col interactionp comment_buttonp"></button>
+              <button class="col interactionp share_buttonp"></button>
+              <button class="col interactionp save_buttonp"></button>
             </div>
           </footer>
         </div>
@@ -181,11 +181,11 @@
           <!--interactions-->
           <footer class="container-fluid">
             <div class="row  text-center">
-              <div class="col">Likes</div>
-              <div class="col">Dislikes</div>
-              <div class="col">Comment</div>
-              <div class="col">Share</div>
-              <div class="col">Save</div>
+              <button class="col interactionp like_buttonp"></button>
+              <button class="col interactionp dislike_buttonp"></button>
+              <button class="col interactionp comment_buttonp"></button>
+              <button class="col interactionp share_buttonp"></button>
+              <button class="col interactionp save_buttonp"></button>
             </div>
           </footer>
         </div>
@@ -210,11 +210,11 @@
           <!--interactions-->
           <footer class="container-fluid">
             <div class="row  text-center">
-              <div class="col">Likes</div>
-              <div class="col">Dislikes</div>
-              <div class="col">Comment</div>
-              <div class="col">Share</div>
-              <div class="col">Save</div>
+              <button class="col interactionp like_buttonp"></button>
+              <button class="col interactionp dislike_buttonp"></button>
+              <button class="col interactionp comment_buttonp"></button>
+              <button class="col interactionp share_buttonp"></button>
+              <button class="col interactionp save_buttonp"></button>
             </div>
           </footer>
         </div>
