--- a/client/public/profile.html
+++ b/client/public/profile.html
@@ -14,7 +14,7 @@
 <body>
   <nav>
     <header>
-      <img src="/client/public/subfiles/picture/Ylight.png" alt="logo">
+      <a href="/client/public/index.html"><img src="/client/public/subfiles/picture/Ylight.png" alt="logo"></a>
     </header>
 
     <div class="container-fluid text-center">
