Co-authored-by: Erik Carlsson <Erkzan@users.noreply.github.com>

--- a/client/public/profile.html
+++ b/client/public/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>[Title of your project]</title>
+  <title>Y - Profile</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -14,20 +14,20 @@
 <body>
   <nav>
     <header>
-      <a href="/client/public/index.html"><img src="/client/public/subfiles/picture/Ylight.png" alt="logo"></a>
+      <a href="/"><img src="subfiles/picture/Ylight.png" alt="logo"></a>
     </header>
 
     <div class="container-fluid text-center">
       <div class="row row-cols-auto menu_options">
-        <a class="col menu_option" href="index.html" >Home</a>
+        <a class="col menu_option" href="/" >Home</a>
         <div class="menu_option box_search">
           <form action="search.html" method="get">
             <input type="text" class="s_input" name="search" onmouseout="this.value = ''; this.blur();">
           </form>
           <p>Search</p>
         </div>
-        <a class="col menu_option" href="friends.html" >Friends</a>
-        <a class="col menu_option" href="profile.html" >Profile</a>
+        <a class="col menu_option" href="/friends" >Friends</a>
+        <a class="col menu_option" href="/profile" >Profile</a>
       </div>
     </div>
   </nav>
