--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <title>[Title of your project]</title>
+  <title>Y - Home</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -22,20 +22,20 @@
 
   <nav>
     <header>
-      <img src="/client/public/subfiles/picture/Ylight.png" alt="logo">
+      <a href="/"><img src="subfiles/picture/Ylight.png" alt="logo"></a>
     </header>
 
     <div class="container-fluid text-center">
       <div class="row row-cols-auto menu_options">
-        <a class="col menu_option" href="index.html" >Home</a>
+        <a class="col menu_option" href="/" >Home</a>
         <div class="menu_option box_search">
           <form action="search.html" method="get">
             <input type="text" class="s_input" name="search" onmouseout="this.value = ''; this.blur();">
           </form>
           <p>Search</p>
         </div>
-        <a class="col menu_option" href="friends.html" >Friends</a>
-        <a class="col menu_option" href="profile.html" >Profile</a>
+        <a class="col menu_option" href="/friends" >Friends</a>
+        <a class="col menu_option" href="/profile" >Profile</a>
       </div>
     </div>
   </nav>
