--- a/client/public/login.html
+++ b/client/public/login.html
@@ -6,7 +6,7 @@
     <title>login</title>
 </head>
 <body>
-    <form action="/profile/reg" method="post">
+    <form action="/profile/login" method="post">
         <input type="text" name="username" placeholder="name">
         <input type="password" name="password" placeholder="password">
         <input type="submit" value="bög">
