--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,315 +1,43 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
-<head>
-  <title>Y - Home</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="subfiles/main.css" />
-  <link rel="stylesheet" type="text/css" href="subfiles/post.css" />
-  <link rel="stylesheet" type="text/css" href="subfiles/friend.css" />
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-    crossorigin="anonymous"></script>
-</head>
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>React App</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
 
-<body>
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
 
-  <nav>
-    <header>
-      <a href="/"><img src="subfiles/picture/Ylight.png" alt="logo"></a>
-    </header>
-
-    <div class="container-fluid text-center">
-      <div class="row row-cols-auto menu_options">
-        <a class="col menu_option" href="/" >Home</a>
-        <div class="menu_option box_search">
-          <form action="search.html" method="get">
-            <input type="text" class="s_input" name="search" onmouseout="this.value = ''; this.blur();">
-          </form>
-          <p>Search</p>
-        </div>
-        <a class="col menu_option" href="/friends" >Friends</a>
-        <a class="col menu_option" href="/profile" >Profile</a>
-      </div>
-    </div>
-  </nav>
-
-
-  <div class="page">
-    <section class="main_feed_container">
-      <!--a post-->
-      <div class="container-md post_container">
-        <!--profile picture and time of post-->
-        <div class="col-sm-1">
-          <div class="profile_pic">
-
-          </div>
-          <div class="timestamp">
-            12 min
-          </div>
-        </div>
-        <!--main post content-->
-        <div class="col-sm container-md">
-          <div class="user">Emil Johansson</div>
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nobis pariatur ullam sed aspernatur
-            asperiores, quisquam odio sunt, reprehenderit dolorem molestias, iusto nam. Quia alias optio, eum enim
-            obcaecati consequuntur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio expedita placeat
-            corrupti velit veritatis soluta, distinctio tenetur culpa? Corrupti porro numquam fugit quia sapiente
-            reprehenderit doloremque incidunt ab illo repellat. lor</div>
-          <div></div>
-          <!--interactions-->
-          <footer class="container-fluid">
-            <div class="row  text-center">
-              <button class="col interaction like_button"></button>
-              <button class="col interaction dislike_button"></button>
-              <button class="col interaction comment_button"></button>
-              <button class="col interaction share_button"></button>
-              <button class="col interaction save_button"></button>
-            </div>
-          </footer>
-        </div>
-      </div>
-
-      <div class="container-md post_container">
-        <!--profile picture and time of post-->
-        <div class="col-sm-1">
-          <div class="profile_pic">
-
-          </div>
-          <div class="timestamp">
-            12 min
-          </div>
-        </div>
-        <!--main post content-->
-        <div class="col-sm container-md">
-          <div class="user">Emil Johansson</div>
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nobis pariatur ullam sed aspernatur
-            asperiores, quisquam odio sunt, reprehenderit dolorem molestias, iusto nam. Quia alias optio, eum enim
-            obcaecati consequuntur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio expedita placeat
-            corrupti velit veritatis soluta, distinctio tenetur culpa? Corrupti porro numquam fugit quia sapiente
-            reprehenderit doloremque incidunt ab illo repellat. lor</div>
-          <div></div>
-          <!--interactions-->
-          <footer class="container-fluid">
-            <div class="row  text-center">
-              <button class="col interaction like_button"></button>
-              <button class="col interaction dislike_button"></button>
-              <button class="col interaction comment_button"></button>
-              <button class="col interaction share_button"></button>
-              <button class="col interaction save_button"></button>
-            </div>
-          </footer>
-        </div>
-      </div>
-
-      <div class="container-md post_container">
-        <!--profile picture and time of post-->
-        <div class="col-sm-1">
-          <div class="profile_pic">
-
-          </div>
-          <div class="timestamp">
-            12 min
-          </div>
-        </div>
-        <!--main post content-->
-        <div class="col-sm container-md">
-          <div class="user">Emil Johansson</div>
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nobis pariatur ullam sed aspernatur
-            asperiores, quisquam odio sunt, reprehenderit dolorem molestias, iusto nam. Quia alias optio, eum enim
-            obcaecati consequuntur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio expedita placeat
-            corrupti velit veritatis soluta, distinctio tenetur culpa? Corrupti porro numquam fugit quia sapiente
-            reprehenderit doloremque incidunt ab illo repellat. lor</div>
-          <div></div>
-          <!--interactions-->
-          <footer class="container-fluid">
-            <div class="row  text-center">
-              <button class="col interaction like_button"></button>
-              <button class="col interaction dislike_button"></button>
-              <button class="col interaction comment_button"></button>
-              <button class="col interaction share_button"></button>
-              <button class="col interaction save_button"></button>
-            </div>
-          </footer>
-        </div>
-      </div>
-
-      <div class="container-md post_container">
-        <!--profile picture and time of post-->
-        <div class="col-sm-1">
-          <div class="profile_pic">
-
-          </div>
-          <div class="timestamp">
-            12 min
-          </div>
-        </div>
-        <!--main post content-->
-        <div class="col-sm container-md">
-          <div class="user">Emil Johansson</div>
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nobis pariatur ullam sed aspernatur
-            asperiores, quisquam odio sunt, reprehenderit dolorem molestias, iusto nam. Quia alias optio, eum enim
-            obcaecati consequuntur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio expedita placeat
-            corrupti velit veritatis soluta, distinctio tenetur culpa? Corrupti porro numquam fugit quia sapiente
-            reprehenderit doloremque incidunt ab illo repellat. lor</div>
-          <div></div>
-          <!--interactions-->
-          <footer class="container-fluid">
-            <div class="row  text-center">
-              <button class="col interaction like_button"></button>
-              <button class="col interaction dislike_button"></button>
-              <button class="col interaction comment_button"></button>
-              <button class="col interaction share_button"></button>
-              <button class="col interaction save_button"></button>
-            </div>
-          </footer>
-        </div>
-      </div>
-
-      <div class="container-md post_container">
-        <!--profile picture and time of post-->
-        <div class="col-sm-1">
-          <div class="profile_pic">
-
-          </div>
-          <div class="timestamp">
-            12 min
-          </div>
-        </div>
-        <!--main post content-->
-        <div class="col-sm container-md">
-          <div class="user">Emil Johansson</div>
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nobis pariatur ullam sed aspernatur
-            asperiores, quisquam odio sunt, reprehenderit dolorem molestias, iusto nam. Quia alias optio, eum enim
-            obcaecati consequuntur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio expedita placeat
-            corrupti velit veritatis soluta, distinctio tenetur culpa? Corrupti porro numquam fugit quia sapiente
-            reprehenderit doloremque incidunt ab illo repellat. lor</div>
-          <div></div>
-          <!--interactions-->
-          <footer class="container-fluid">
-            <div class="row  text-center">
-              <button class="col interaction like_button"></button>
-              <button class="col interaction dislike_button"></button>
-              <button class="col interaction comment_button"></button>
-              <button class="col interaction share_button"></button>
-              <button class="col interaction save_button"></button>
-            </div>
-          </footer>
-        </div>
-      </div>
-    </section>
-
-    <aside class="friend_container">
-      <div class="friend container-md">
-        <div class="col-sm-1 profile_pic">
-
-        </div>
-        <div class="col-sm container-md">
-          <div class="user">Lorem ipsum</div>
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
-              aperiam.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="friend container-md">
-        <div class="col-sm-1 profile_pic">
-
-        </div>
-        <div class="col-sm container-md">
-          <div class="user">Lorem ipsum</div>
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
-              aperiam.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="friend container-md">
-        <div class="col-sm-1 profile_pic">
-
-        </div>
-        <div class="col-sm container-md">
-          <div class="user">Lorem ipsum</div>
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
-              aperiam.
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="friend container-md">
-        <div class="col-sm-1 profile_pic">
-
-        </div>
-        <div class="col-sm container-md">
-          <div class="user">Lorem ipsum</div>
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
-              aperiam.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="friend container-md">
-        <div class="col-sm-1 profile_pic">
-
-        </div>
-        <div class="col-sm container-md">
-          <div class="user">Lorem ipsum</div>
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
-              aperiam.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="friend container-md">
-        <div class="col-sm-1 profile_pic">
-
-        </div>
-        <div class="col-sm container-md">
-          <div class="user">Lorem ipsum</div>
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
-              aperiam.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="friend container-md">
-        <div class="col-sm-1 profile_pic">
-
-        </div>
-        <div class="col-sm container-md">
-          <div class="user">Lorem ipsum</div>
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis beatae adipisci quia eveniet, alias
-              aperiam.
-            </p>
-          </div>
-        </div>
-      </div>
-    </aside>
-  </div>
-</body>
-
-
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+  </body>
 </html>
